# one-shot-monkey.github.io

./: CNAME  Gemfile  Makefile  _config.yml  hello.py  index.html  pyproject.toml
.github/workflows/: pages-deploy.yml
_data/: authors.yml  categories.yml  contact.yml  share.yml
_includes/: gallery.html  sidebar.html  wide.html
_layouts/: category.html  home.html  home_en.html  mycategories.html  post.html
_plugins/: jekyll-responsive-magick.rb
_posts/: 2019-06-01-bikes.md  2020-05-22-Oetztal.md  2020-07-30-Watzmann.md  2021-03-01-Heimgarten.md  2022-06-12-venedig.md  2022-10-09-croatia.md  2023-01-01-cloth.md  2023-01-01-technik.md  2023-02-10-srilanka.md  2023-03-24-philipines.md  2023-04-20-japan.md  2023-05-30-greece.md  2023-06-01-soutitaly.md  2023-09-01-slowenien.md  2024-03-27-portugal.md  2024-04-20-camping.md  2024-04-28-plan-portugal-spain.md  2024-04-28-plan.md  2024-05-27-portugal.md  2024-06-27-spain.md  2025-03-16-bike.md
_sass/: _custom.css
_tabs/: Datenschutz.md  about.md  categories.md
assets/gpx/: 2023-05-05_1106330625_Griechenland.gpx  italy.gpx  portugal_VilaReal_Bilbao.gpx
assets/thumbs/: index.html
assets/thumbs/gpx/: 2023-05-14_1117960371_sit.gpx  2023-09-17_1313559266_Slowenien.gpx  Japan.gpx  srilanka.gpx
assets/thumbs/img/favicons/: site.webmanifest
assets/thumbs/js/data/: search.json  swconf.js
en/: index.html
en/_posts/: 2025-03-16-bike.md
locales/: de-DE.yml
scripts/: get_images.py  responsive_images.py  to_assets.sh
